--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,18 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
+    "highlight.js": "^11.11.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.0.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
